# miniC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: AST.md  ASTVisitor.md  CodeGenerator.md  IR.md  IRGenerator.md  Lexer.md  Parser.md  SemanticAnalyzer.md  Token.md  dev.md
include/miniC/: ASTVisitor.hpp  Lexer.hpp  Parser.hpp  SemanticAnalyzer.hpp  Token.hpp  ast.hpp
include/minic/: AST.hpp  ASTVisitor.hpp  CodeGenerator.hpp  IR.hpp  IRGenerator.hpp  Lexer.hpp  Parser.hpp  SemanticAnalyzer.hpp
src/: CMakeLists.txt  CodeGenerator.cpp  IRGenerator.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  main.cpp
tests/: CMakeLists.txt  Lexer.cpp  TestAST.cpp  TestExample.cpp  TestIRGenerator.cpp  TestLexer.cpp  TestParser.cpp  TestSemanticAnalyzer.cpp  example_test.cpp  main.cpp
